<resources>
    <string name="app_name">云舒课表</string>
    <string name="navigation_drawer_open">打开导航抽屉</string>
    <string name="navigation_drawer_close">关闭导航抽屉</string>
    <string name="action_set_text_size">设置字体大小</string>
    <string name="login_name">登陆</string>
    <string name="action_set_background_image">更换背景图片</string>
    <string name="action_show_teacher_info">显示授课教师</string>
    <string name="check_score_input_name">姓名</string>
    <string name="check_score_input_id">学号</string>
    <string name="check_score_checkbox_text">记住姓名和学号</string>
    <string name="check_score_btn_text">登陆</string>
    <string name="dialog_class_schedule_name">课程名</string>
    <string name="dialog_class_schedule_location">地点</string>
    <string name="dialog_class_schedule_teacher">教师</string>
    <string name="dialog_class_schedule_paste">粘贴该课程</string>
    <string name="dialog_class_schedule_copy">复制该课程</string>
    <string name="about_create">软件施工：ITNING 舒露</string>
    <string name="about_prototype_design">原型设计：舒露</string>
    <string name="about_test">软件测试：舒露</string>
    <string name="about_github">Github：YunShuClassSchedule</string>
    <string name="about_series">Yun Shu™ SoftWare Series</string>
    <string name="about_copyrights">© 2018 ITNING.TOP ALL RIGHTS RESERVED</string>
    <string name="time_morning">上午课程时间</string>
    <string name="time_1s">第1节上课</string>
    <string name="time_1x">第1节下课</string>
    <string name="time_2s">第2节上课</string>
    <string name="time_2x">第2节下课</string>
    <string name="time_afternoon">下午课程时间</string>
    <string name="time_3s">第3节上课</string>
    <string name="time_3x">第3节下课</string>
    <string name="time_4s">第4节上课</string>
    <string name="time_4x">第4节下课</string>
    <string name="time_night">晚自习时间</string>
    <string name="time_5s">第5节上课</string>
    <string name="time_5x">第5节下课</string>
    <string name="login_btn_text">登陆</string>
    <string name="login_btn_refresh">重新加载</string>
    <string name="login_btn_custom">自定义课程</string>
    <string name="week_course_1">1</string>
    <string name="week_course_2">2</string>
    <string name="week_course_3">3</string>
    <string name="week_course_4">4</string>
    <string name="week_course_5">5</string>
    <string name="week_1">星期一</string>
    <string name="week_2">星期二</string>
    <string name="week_3">星期三</string>
    <string name="week_4">星期四</string>
    <string name="week_5">星期五</string>
    <string name="week_6">星期六</string>
    <string name="week_7">星期日</string>
    <string name="drawer_class_schedule">课程表</string>
    <string name="drawer_check_score">查成绩</string>
    <string name="drawer_another">其它</string>
    <string name="drawer_settings">设置</string>
    <string name="drawer_day_night">夜间模式</string>
    <string name="custom_done">完成</string>
    <string name="share_import_title">导入课程数据</string>
    <string name="share_import_file">选择文件导入</string>
    <string name="share_export_title">导出课程数据</string>
    <string name="share_export_file">导出到文件</string>
    <string name="share_export_share">分享课程数据</string>
    <string name="customactivityoncrash_error_activity_error_occurred_explanation">(╥﹏╥)\n发生了错误</string>
    <string name="customactivityoncrash_error_activity_restart_app">重新打开APP</string>
    <string name="customactivityoncrash_error_activity_close_app">关闭APP</string>
    <string name="customactivityoncrash_error_activity_error_details">详细错误信息</string>
    <string name="customactivityoncrash_error_activity_error_details_title">详细错误信息</string>
    <string name="customactivityoncrash_error_activity_error_details_close">关闭</string>
    <string name="customactivityoncrash_error_activity_error_details_copy">复制错误信息</string>
    <string name="customactivityoncrash_error_activity_error_details_copied">已复制</string>
    <string name="customactivityoncrash_error_activity_error_details_clipboard_label">错误信息</string>
</resources>
