<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatTextView
            style="@style/custom_all_title"
            android:text="@string/time_morning" />

        <RelativeLayout
            android:id="@+id/rl_1_s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground">

            <android.support.v7.widget.AppCompatTextView
                style="@style/custom_all"
                android:text="@string/time_1s" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/s-1"
                style="@style/custom_all"
                android:layout_alignParentEnd="true"
                tools:text="08:20" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_1_x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground">

            <android.support.v7.widget.AppCompatTextView
                style="@style/custom_all"
                android:text="@string/time_1x" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/x-1"
                style="@style/custom_all"
                android:layout_alignParentEnd="true"
                tools:text="09:50" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_2_s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground">

            <android.support.v7.widget.AppCompatTextView
                style="@style/custom_all"
                android:text="@string/time_2s" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/s-2"
                style="@style/custom_all"
                android:layout_alignParentEnd="true"
                tools:text="10:05" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_2_x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground">

            <android.support.v7.widget.AppCompatTextView
                style="@style/custom_all"
                android:text="@string/time_2x" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/x-2"
                style="@style/custom_all"
                android:layout_alignParentEnd="true"
                tools:text="11:35" />
        </RelativeLayout>

        <android.support.v7.widget.AppCompatTextView
            style="@style/custom_all_title"
            android:text="@string/time_afternoon" />

        <RelativeLayout
            android:id="@+id/rl_3_s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground">

            <android.support.v7.widget.AppCompatTextView
                style="@style/custom_all"
                android:text="@string/time_3s" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/s-3"
                style="@style/custom_all"
                android:layout_alignParentEnd="true"
                tools:text="12:55" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_3_x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground">

            <android.support.v7.widget.AppCompatTextView
                style="@style/custom_all"
                android:text="@string/time_3x" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/x-3"
                style="@style/custom_all"
                android:layout_alignParentEnd="true"
                tools:text="14:25" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_4_s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground">

            <android.support.v7.widget.AppCompatTextView
                style="@style/custom_all"
                android:text="@string/time_4s" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/s-4"
                style="@style/custom_all"
                android:layout_alignParentEnd="true"
                tools:text="14:40" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_4_x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground">

            <android.support.v7.widget.AppCompatTextView
                style="@style/custom_all"
                android:text="@string/time_4x" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/x-4"
                style="@style/custom_all"
                android:layout_alignParentEnd="true"
                tools:text="16:10" />
        </RelativeLayout>

        <android.support.v7.widget.AppCompatTextView
            style="@style/custom_all_title"
            android:text="@string/time_night" />

        <RelativeLayout
            android:id="@+id/rl_5_s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground">

            <android.support.v7.widget.AppCompatTextView
                style="@style/custom_all"
                android:text="@string/time_5s" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/s-5"
                style="@style/custom_all"
                android:layout_alignParentEnd="true"
                tools:text="17:30" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_5_x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground">

            <android.support.v7.widget.AppCompatTextView
                style="@style/custom_all"
                android:text="@string/time_5x" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/x-5"
                style="@style/custom_all"
                android:layout_alignParentEnd="true"
                tools:text="20:00" />
        </RelativeLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>